--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<i class="fa-regular fa-envelope project-color" aria-hidden="true"></i>
 					</div>
 					<div class="col-10">
-						<a href="mailto:fatemakhankgsc@gmail.com" class="link-dark">email</a>
+						<a href="mailto:fatemakhan3199@gmail.com" class="link-dark">email</a>
 					</div>
 				</div>
 				<div class="row mb-2">
