--- a/index.html
+++ b/index.html
@@ -296,15 +296,8 @@
 						<div class="card-body">
 							<h5 class="card-title">1. Sentiment Analysis of Amazon Magazine Reviews using NLP models
 							</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#NLP #Sentiment Analysis #TransformerModels</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-1.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -313,15 +306,9 @@
 					<div class="card mb-3 shadow-sm">
 						<div class="card-body">
 							<h5 class="card-title">2. Real-Time Traffic Monitoring at Dhaka’s Road Intersections</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#ComputerVision #YOLOv8 #ObjectTracking #Darknet</p>
+							
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-2.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -331,15 +318,8 @@
 						<div class="card-body">
 							<h5 class="card-title">3. Enhancing Classification Robustness: Stability Analysis of
 								Fuzzy and Shannon Entropy of Image under Noisy Environment</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#ImageEntropy #Noise #StabilityAnalysis #ImageAnalysis</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-3.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -348,15 +328,8 @@
 					<div class="card mb-3 shadow-sm">
 						<div class="card-body">
 							<h5 class="card-title">4. An Automated Approach for Fruit Leaf Disease Recognition</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#ImageProcessing #MachineLearning #DiseaseClassification</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-4.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -365,15 +338,8 @@
 					<div class="card mb-3 shadow-sm">
 						<div class="card-body">
 							<h5 class="card-title">5. Traffic Object Detection in Real-Time Videos</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#ObjectDetection #YOLOv3 #ComputerVision</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-5.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -381,17 +347,9 @@
 					</div>
 					<div class="card mb-3 shadow-sm">
 						<div class="card-body">
-							<h5 class="card-title">6. Bugs and Flowers Detection and Classification Using YOLOv3 and
-								OpenCV</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<h5 class="card-title">6. Bugs and Flowers Detection and Classification</h5>
+							<p class="card-subtitle mb-2 text-muted">#YOLOv3 #BugsDetection #FlowerDetection #ComputerVision</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-6.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
@@ -400,15 +358,8 @@
 					<div class="card mb-3 shadow-sm">
 						<div class="card-body">
 							<h5 class="card-title">7. SecurityCat: A Simple Ultrasonic Radar System</h5>
-							<p class="card-subtitle mb-2 text-muted">#128 | IOS development</p>
-							<p class="card-text">
-								<strong>Team:</strong> Ekaterina Brilliantova, Alexey Smirnov, Titomir Alerziani
-							</p>
+							<p class="card-subtitle mb-2 text-muted">#EmbeddedSystem #IOT #Arduino</p>
 							<div class="d-flex justify-content-between">
-								<div>
-									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
-									<p><strong>Date of completion:</strong> 23.11.19</p>
-								</div>
 								<a href="project-7.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
