--- a/project-5.html
+++ b/project-5.html
@@ -82,11 +82,11 @@
 						</p>
 
 						<h3 class="text-center project-color">Result </h3>
-						<video controls width="320" height="240">
+						<!-- <video controls width="320" height="240">
 							<source src="assets/project/pro-v-5-1.mp4" type="video/mp4">
 							<source src="movie.ogg" type="video/ogg">
 							Your browser does not support the video tag.
-						  </video>
+						  </video> -->
 						<p class="project-overview">
 							The outcomes demonstrated the system's ability to efficiently detect and label traffic
 							objects in videos with high accuracy and responsiveness, even in dynamic and complex
