--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 					<h3 class="mt-2 project-color">Work Experience</h3>
 					<div class="experience">
 						<h5>University of Liberal Arts Bangladesh</h5>
-						<span>- Lecturer, Department of Computer Science and Engineering (February 2021 – January 2023)</span>
+						<span>- Lecturer, Department of Computer Science and Engineering (October 2023 – Present)</span>
 					</div>
 					<div class="experience">
 						<h5>Green University of Bangladesh </h5>
