--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 							<li class="abme-honors-bullet mt-2">Computer Vision</li>
 							<li class="abme-honors-bullet mt-2">Human Computer Interaction</li>
 						</ul>
-						<h4 id="honors-and-awards" class="mt-2" data-es="Premios y Distinciones"
+						<h4 id="honors-and-awards" class="mt-2 project-color" data-es="Premios y Distinciones"
 							data-en="Honors and Awards"></h4>
 
 						<ul class="mt-1">
