project page update

--- a/project-2.html
+++ b/project-2.html
@@ -90,6 +90,15 @@
 							The system iteratively updates the counts of vehicles and average speed at regular
 							intervals, typically every 10 seconds.
 						</p>
+						<h3 class="text-center project-color">Method </h3>
+
+						<p class="project-overview">
+							One of the significant contributions was enabling YOLOv8 model in identifying the three
+							wheelers like CNG (which is a common transport in Dhaka city but not widely used or
+							recognized) effectively.
+						</p>
+						<img src="assets/project/project-2-1.jpg" alt=""><br /><br />
+						<h3 class="text-center project-color" style="padding-top: 20px;">Result </h3>
 						<p class="project-overview">
 							The CSV file can be served as a valuable resource for traffic monitoring, trend analysis,
 							prediction, and decision
@@ -99,9 +108,6 @@
 							more in-depth analysis and
 							visualization, enhancing the versatility and usability of the system’s output.
 						</p>
-						<h3 class="text-center project-color">Method </h3>
-						<img src="assets/project/project-2-1.jpg" alt=""><br /><br />
-						<h3 class="text-center project-color">Result </h3>
 						<img src="assets/project/pro-1-2.jpeg" alt=""><br /><br />
 						<img src="assets/project/project-2-4.jpg" alt=""><br /><br />
 						<img src="assets/project/project-2-2.jpg" alt=""><br /><br />
