--- a/project-1.html
+++ b/project-1.html
@@ -70,7 +70,7 @@
 					<div class="row language">
 						<h3 id="researchinterestsH4" class="mt-2 project-color" data-es="Sentiment Analysis of Amazon Magazine Reviews 
 						using NLP models" data-en="Sentiment Analysis of Amazon Magazine Reviews 
-							using NLP modelsV">
+							using NLP Models">
 						</h3>
 						<h3 class="text-center project-color">Objective</h3>
 						<p class="project-overview">
