image width added

--- a/project-1.html
+++ b/project-1.html
@@ -91,8 +91,8 @@
 							for the sentiment classification task.
 						</p>
 
-						<img src="assets/project/pro-1-1.png" alt=""><br>
-						<img src="assets/project/pro-2-1.jpeg" alt="">
+						<img src="assets/project/pro-1-1.png" class="image-size" alt=""><br>
+						<img src="assets/project/pro-2-1.jpeg" class="image-size" alt="">
 						<h3 class="text-center project-color">Result </h3>
 						<p class="project-overview">
 							The results of the performance evaluation on test data highlighted the superiority of the
@@ -101,8 +101,8 @@
 							underscoring its robustness and reliability in handling complex sentiment classification
 							tasks.
 						</p>
-						<img src="assets/project/pro-3-1.jpeg" alt=""><br>
-						<img src="assets/project/pro-4-1.jpeg" alt=""><br>
+						<img src="assets/project/pro-3-1.jpeg" class="image-size" alt=""><br>
+						<img src="assets/project/pro-4-1.jpeg" class="image-size" alt=""><br>
 						<p class="project-overview">
 							The findings of this study underscore the value of BERT as a state-of-the-art NLP model for
 							sentiment analysis, providing both accuracy and reliability in extracting insights from
