--- a/project-2.html
+++ b/project-2.html
@@ -97,7 +97,7 @@
 							wheelers like CNG (which is a common transport in Dhaka city but not widely used or
 							recognized) effectively.
 						</p>
-						<img src="assets/project/project-2-1.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-2-1.jpg" alt=""><br /><br />
 						<h3 class="text-center project-color" style="padding-top: 20px;">Result </h3>
 						<p class="project-overview">
 							The CSV file can be served as a valuable resource for traffic monitoring, trend analysis,
@@ -108,10 +108,10 @@
 							more in-depth analysis and
 							visualization, enhancing the versatility and usability of the system’s output.
 						</p>
-						<img src="assets/project/pro-1-2.jpeg" alt=""><br /><br />
-						<img src="assets/project/project-2-4.jpg" alt=""><br /><br />
-						<img src="assets/project/project-2-2.jpg" alt=""><br /><br />
-						<img src="assets/project/project-2-3.jpg" alt="">
+						<img  class="image-size" src="assets/project/pro-1-2.jpeg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-2-4.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-2-2.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-2-3.jpg" alt="">
 					</div>
 				</div>
 			</div>
