--- a/project-3.html
+++ b/project-3.html
@@ -91,7 +91,7 @@
 							(NB), and Decision Tree (DT) ) to classify image sets and comparing their performance with
 							deep learning algorithms (CNN and LSTM) under noisy environment.
 						</p><br /><br />
-						<img src="assets/project/project-3-1.jpg" alt=""><br />
+						<img  class="image-size" src="assets/project/project-3-1.jpg" alt=""><br />
 						<h3 class="text-center project-color">Result </h3>
 						<p class="project-overview">
 							From the first stage analysis, fuzzy entropy was found more stable against SNR. The second
@@ -99,11 +99,11 @@
 							stability of accuracy with variation of SNR compared to CNN and LSTM where images were
 							applied directly.
 						</p><br /><br />
-						<img src="assets/project/project-3-2.jpg" alt=""><br /><br />
-						<img src="assets/project/project-3-3.jpg" alt=""><br /><br />
-						<img src="assets/project/project-3-5.jpg" alt=""><br /><br />
-						<img src="assets/project/project-3-4.jpg" alt=""><br /><br />
-						<!-- <img src="assets/project/project-3-7.jpg" alt=""><br /><br /> -->
+						<img  class="image-size" src="assets/project/project-3-2.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-3-3.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-3-5.jpg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/project-3-4.jpg" alt=""><br /><br />
+						<!-- <img  class="image-size" src="assets/project/project-3-7.jpg" alt=""><br /><br /> -->
 						<p class="project-overview">
 							This study, proves the effectiveness of fuzzy entropy as a feature. Future of this work
 							includes: combine the ‘fuzzy entropy vector’ with other features like SURF, SIFT, HOG, DWT
