--- a/project-4.html
+++ b/project-4.html
@@ -94,15 +94,15 @@
 							leaf disease classification. The dataset was split into training and testing set by 80% and
 							20% ratio. (The model was built training the dataset) Then trained the dataset under a
 							Random Forest Classifier, Support Vector Machine, and K-Nearest Neighbor algorithms. </p>
-						<img src="assets/project/pro-1-4.jpeg" alt="">
-						<img src="assets/project/pro-2-4.jpeg" alt="">
+						<img  class="image-size" src="assets/project/pro-1-4.jpeg" alt="">
+						<img  class="image-size" src="assets/project/pro-2-4.jpeg" alt="">
 						<h3 class="text-center project-color">Result </h3><br>
 						<p class="project-overview">
 							The model’s performance was evaluated considering accuracy and F1 score. It was found that
 							Random Forest Classifier shows best result than the other models.
 						</p>
-						<img src="assets/project/pro-3-4.jpeg" alt="">
-						<img src="assets/project/pro-4-4.jpeg" alt=""><br /><br />
+						<img  class="image-size" src="assets/project/pro-3-4.jpeg" alt="">
+						<img  class="image-size" src="assets/project/pro-4-4.jpeg" alt=""><br /><br />
 						<p class="project-overview">
 							Integrating this system into the backend server of an application, can be used to assist
 							farmers in detecting plant diseases using leaf photos. The user will take a picture of a
