--- a/project-6.html
+++ b/project-6.html
@@ -95,12 +95,12 @@
 							images, indicating areas for potential improvement in the training process or dataset
 							augmentation.
 						</p><br>
-						<img src="assets/project/project-6-1.jpg" alt=""><br><br>
-						<img src="assets/project/project-6-2.jpg" alt=""><br><br>
-						<img src="assets/project/project-6-3.jpg" alt=""><br><br>
-						<img src="assets/project/project-6-4.jpg" alt=""><br><br>
-						<img src="assets/project/project-6-5.jpg" alt=""><br><br>
-						<img src="assets/project/project-6-6.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-1.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-2.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-3.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-4.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-5.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-6-6.jpg" alt=""><br><br>
 						<p class="project-overview">
 							By extending the scope to other object classes and improving accuracy with larger and more
 							diverse datasets, the project could become an essential tool in precision agriculture,
