--- a/project-7.html
+++ b/project-7.html
@@ -89,19 +89,18 @@
 							range. The Processing IDE is used to create a radar display on the computer by writing code
 							to visualize object positions based on the sensor data.
 						</p>
-						<img src="assets/project/project-7-1.jpg" alt=""><br><br>
-						<img src="assets/project/project-7-2.jpg" alt=""><br><br>
-						<img src="assets/project/project-7-3.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-7-1.jpg" alt=""><br><br>
+						<img  class="image-size" src="assets/project/project-7-2.jpg" alt=""><br><br>
 						<h3 class="text-center project-color">Result </h3>
 						<p class="project-overview">
 							This project can be used as a security system to detect intruders.
 							It can be also help blind people by warning them of obstacles.
 						</p>
-						<img src="assets/project/pro-1-7.jpeg" alt=""><br/><br/>
-						<img src="assets/project/pro-2-7.jpeg" alt=""><br/><br/>
-						<img src="assets/project/pro-3-7.jpeg" alt=""><br/><br/>
-						<img src="assets/project/pro-4-7.jpeg" alt=""><br/><br/>
-						<img src="assets/project/pro-5-7.jpeg" alt=""><br/><br/>
+						<img  class="image-size" src="assets/project/pro-1-7.jpeg" alt=""><br/><br/>
+						<img  class="image-size" src="assets/project/pro-2-7.jpeg" alt=""><br/><br/>
+						<img  class="image-size" src="assets/project/pro-3-7.jpeg" alt=""><br/><br/>
+						<img  class="image-size" src="assets/project/pro-4-7.jpeg" alt=""><br/><br/>
+						<img  class="image-size" src="assets/project/pro-5-7.jpeg" alt=""><br/><br/>
 					</div>
 				</div>
 			</div>
