project 5 video section add

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
 					</div>
 
 					<div class="col-10">
-						<!-- <a href="assets/img/cv_fatema.pdf" class="link-dark" target="_blank" data-en="CV [Updated 10/2024]"></a> -->
-						<a href="#" class="link-dark" data-en="CV [Updated 12/2024]"></a>
+						<a href="assets/img/RESUME_FATEMA_KHAN.pdf" class="link-dark" target="_blank" data-en="CV [Updated 12/2024]"></a>
 					</div>
 				</div>
 
