--- a/project-2.html
+++ b/project-2.html
@@ -88,15 +88,12 @@
 							video, the collected data is written in a CSV file. The CSV file is initialized with the
 							appropriate headers for each type of vehicle (such as Timestamp, Car Up, Car Down, etc.).
 							The system iteratively updates the counts of vehicles and average speed at regular
-							intervals, typically every 10 seconds.
-						</p>
-						<h3 class="text-center project-color">Method </h3>
-
-						<p class="project-overview">
+							intervals, typically every 10 seconds.<br/>
 							One of the significant contributions was enabling YOLOv8 model in identifying the three
 							wheelers like CNG (which is a common transport in Dhaka city but not widely used or
 							recognized) effectively.
 						</p>
+						<h3 class="text-center project-color">Method </h3>
 						<img  class="image-size" src="assets/project/project-2-1.jpg" alt=""><br /><br />
 						<h3 class="text-center project-color" style="padding-top: 20px;">Result </h3>
 						<p class="project-overview">
