new menu added contact, education

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 						<a class="nav-link active" id="aboutme" href="#" data-en="About">
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" id="education" href="#" data-en="Education">
+						</a>
+					</li>
 
 					<li class="nav-item">
 						<a class="nav-link" id="publications" href="#" data-en="Publications">
@@ -78,7 +82,11 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" id="extraCurricular" href="#" data-en="Extra Curricular">
+						<a class="nav-link" id="extraCurricular" href="#" data-en="Miscellaneous">
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" id="contact" href="#" data-en="Contact">
 						</a>
 					</li>
 					<!-- <li class="nav-item">
@@ -218,6 +226,36 @@
 								University from session 2017 to 2022.
 							</li>
 						</ul>
+					</div>
+				</div>
+			</div>
+			<!-- Education -->
+			<div class="col-md-8 offset-md-1 mb-5 gap-between" id="educationContent">
+				<div class="container">
+					<div class="row language">
+						<h3 class="mt-2 project-color">Education</h3>
+						<div class="mb-4">
+							<h5 class="project-color">Jahangirnagar University, Savar, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">M.Sc. in Computer Science and Engineering (July 2022 – August 2023)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.95</span> / 4.00</p>
+							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span class="project-color">3<sup>rd</sup></span> / among 50</p>
+						</div>
+						<div class="mb-4">
+							<h5 class="project-color">Jahangirnagar University, Savar, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">B.Sc. in Computer Science and Engineering (March 2017 – June 2022)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.70</span> / 4.00</p>
+							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span class="project-color">3<sup>rd</sup></span> / among 65</p>
+						</div>
+						<div class="mb-4">
+							<h5 class="project-color">Kallyanpur Girls’ School & College, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">Higher Secondary School Certificate (H.S.C.), Science Group (passing year – 2016)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span> / 5.00</p>
+						</div>
+						<div class="mb-4">
+							<h5 class="project-color">Kallyanpur Girls’ School & College, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">Secondary School Certificate (S.S.C.), Science Group (passing year – 2014)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span> / 5.00</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -476,31 +514,95 @@
 			</div>
 			<div class="col-md-8 offset-md-1 gap-between mb-5" id="extraCurricularContent">
 				<div class="container language">
-					<h3 class="mt-2 project-color">Extra Curricular</h3>
-					<div class="experience">
-						<h5>Curriculum Committee Member</h5>
-						<span>- Department of Computer Science and Engineering, University of Liberal Arts Bangladesh
-							(November 2023 - Present)</span>
-					</div>
-					<div class="experience">
-						<h5>Student Mentorship and Advising</h5>
-						<span>- Department of Computer Science and Engineering, University of Liberal Arts Bangladesh
-							(November 2023 - Present)</span>
-					</div>
-					<div class="experience">
-						<h5>Associate Programme Secretary</h5>
-						<span>- Jahangirnagar University Computer Club 2022
-							(July 2018 - April)</span>
-					</div>
-					<div class="experience">
-						<h5>Organizing Committee Member</h5>
-						<span>- JU CSE Fest 2019
-							(October 18-19, 2019)</span>
-					</div>
-					<div class="experience">
-						<h5>Machine Learning and Artificial Intelligence Research Cell Member</h5>
-						<span>- Green University of Bangladesh ( March 2022 - September 2022)</span>
-					</div>
+					<h3 class="mt-2 project-color">Extra-curricular Activities</h3>
+					<ul>
+						<li>
+							<strong>Member Secretary of Continuous Quality Improvement Committee,
+							</strong>Department of Computer Science and Engineering, University of Liberal Arts
+							Bangladesh (June 2024 – Present)
+						</li>
+						<li>
+							<strong>Curriculum Committee Member, </strong>Department of Computer Science and
+							Engineering, University of Liberal Arts Bangladesh (November 2023 – Present)
+						</li>
+						<li>
+							<strong>Student Mentorship and Advising, </strong>Department of Computer Science and
+							Engineering, University of
+							Liberal Arts Bangladesh (November 2023 – Present)
+						</li>
+						<li>
+							<strong>Organizing Committee Member, </strong>International Conference on Advances in
+							Computing, Communication,
+							Electrical and Smart Systems (iCACCESS 2024), University of Liberal Arts Bangladesh, (held
+							on March 8- 9, 2024)
+						</li>
+						<li>
+							<strong>Organizing Committee Member, </strong>4th International Conference on
+							Sustainable Technologies for
+							Industry 4.0 (STI 2022), Green University of Bangladesh, (held on December 17-18, 2022)
+						</li>
+						<li>
+							<strong>Machine Learning and Artificial Intelligence Research Cell Member,
+							</strong>Green University of Bangladesh (March 2022 - September 2022)
+						</li>
+						<li>
+							<strong>Associate Programme Secretary,
+							</strong>Jahangirnagar University Computer Club (July 2018 - April 2022)
+						</li>
+						<li>
+							<strong>General Member,
+							</strong>Jahangirnagar University Higher Study Club (December 2017 - March 2022)
+						</li>
+						<li>
+							<strong>Participated in the Inter-Department Programing Contest, arranged by CSE department,
+							</strong>Jahangirnagar University (2017-2019)
+						</li>
+						<li>
+							<strong>Organizing Committee Member,
+							</strong>JU CSE Fest 2019 (October 18-19, 2019)
+						</li>
+						<li>
+							<strong>Organized,
+							</strong>Girls' Innovative Project Contests at CSE department, Jahangirnagar University
+							(November 2019)
+						</li>
+						<li>
+							<strong>Volunteered 
+							</strong> in the <strong>JU Admission Test Help Desk (Session 2020-2021)</strong>
+						</li>
+						<li>
+							<strong>Volunteered 
+							</strong> in the <strong>Silver Jubilee & Reunion JU CSE 2018</strong>
+						</li>
+						<li>
+							<strong>Performed  
+							</strong>dance, drama in several cultural programs arranged by CSE, Jahangirnagar University in 2017-18
+						</li>
+
+					</ul>
+				</div>
+				<div class="container language">
+					<h3 class="mt-2 project-color">
+						Certifications and Online Courses
+						<a target="_blank" href="certifications-online-courses.html"><i class="fas fa-external-link-alt"></i></a>
+					</h3>
+				</div>
+				<div class="container language">
+					<h3 class="mt-2 project-color">
+						Training Program
+						<a target="_blank" href="training-program.html"><i class="fas fa-external-link-alt"></i></a>
+					</h3>
+				</div>
+			</div>
+
+			<div class="col-md-8 offset-md-1 gap-between mb-5" id="contactContent">
+				<div class="container language">
+					<h3 class="mt-2 project-color">Contact Me</h3>
+					<p>
+						Feel free to ask me any questions you may have. I'll be happy to answer your questions.<br><br>
+						<span class="project-color"><strong>Email: </strong></span>fatemakhan3199@gmail.com
+					</p>
+
 				</div>
 			</div>
 			<div class="col-md-8 offset-md-1 gap-between mb-5" id="misContent55" style="display: none;">
