--- a/index.html
+++ b/index.html
@@ -587,12 +587,12 @@
 						<a target="_blank" href="certifications-online-courses.html"><i class="fas fa-external-link-alt"></i></a>
 					</h3>
 				</div>
-				<div class="container language">
+				<!-- <div class="container language">
 					<h3 class="mt-2 project-color">
 						Training Program
 						<a target="_blank" href="training-program.html"><i class="fas fa-external-link-alt"></i></a>
 					</h3>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="col-md-8 offset-md-1 gap-between mb-5" id="contactContent">
